# HoI4MapDrawer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Hoi4MapDrawer.sln  Hoi4MapDrawer.vcxproj  Hoi4MapDrawer.vcxproj.filters  Hoi4MapDrawerTests.vcxproj  Hoi4MapDrawerTests.vcxproj.filters  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: clang-format-check.yml  codacy-analysis.yaml  linux_codeql-analysis.yml  publish_commit_id.yml  windows_build_test_and_push.yml
data/build_files/: configuration_example.txt
data/build_files/fronter_files/: configuration_l_english.yml  configuration_l_french.yml  configuration_l_german.yml  configuration_l_italian.yml  configuration_l_latin.yml  configuration_l_russian.yml  converter_l_english.yml  converter_l_french.yml  converter_l_german.yml  converter_l_italian.yml  converter_l_latin.yml  converter_l_russian.yml  converter_l_simp_chinese.yml  fronter-configuration.txt
data/test_data/configuration/: test_config.txt
data/test_data/country_colors/: definition_with_color.txt  definition_with_extra_data.txt  definition_with_tags.txt  tag_file_with_extra_data.txt
data/test_data/country_colors/cosmetic_tags_importer/common/countries/: cosmetic.txt
data/test_data/country_colors/country_color_importer/common/countries/: cosmetic.txt  country_one.txt  country_tst.txt  country_two.txt
data/test_data/country_colors/country_color_importer/common/country_tags/: 00_countries.txt
data/test_data/country_colors/tags_directory/common/country_tags/: extra_tag.txt  main_tags.txt  replacement_tag.txt
data/test_data/map_importer_test/valid_map_data/map/: definition.csv
data/test_data/save_reader/: empty_save.hoi4  extra_data_save.hoi4  good_save.hoi4
data/test_data/state_definitions/state_definitions/: 1-Empty.txt
data/test_data/state_definitions/state_definitions/history/states/: 2-Simple.txt  3-ExtraData.txt  42-Mismatch.txt
src/: main.cpp  map_importer.cpp  map_importer.h  map_importer_test.cpp  rakaly_wrapper.h
src/configuration/: Configuration.cpp  configuration.cpp  configuration.h  configuration_test.cpp
src/country_colors/: cosmetic_tags_importer.cpp  cosmetic_tags_importer.h  cosmetic_tags_importer_test.cpp  country_color_importer.cpp  country_color_importer.h  country_color_importer_test.cpp  country_definition_reader.cpp  country_definition_reader.h  country_definition_reader_test.cpp  country_tag_file_reader.cpp  country_tag_file_reader.h  country_tag_file_reader_test.cpp  country_tags_reader.cpp  country_tags_reader.h  country_tags_reader_test.cpp
src/map_drawer/: controller_drawer.cpp  controller_drawer.h  drawer_utils.cpp  drawer_utils.h  faction_controller_drawer.cpp  faction_controller_drawer.h  faction_ownership_drawer.cpp  faction_ownership_drawer.h  ownership_drawer.cpp  ownership_drawer.h
src/map_importer/: map_importer.cpp  map_importer.h  map_importer_test.cpp  pixel.h  pixel_test.cpp
src/save_reader/: countries.h  countries_importer.cpp  countries_importer.h  countries_importer_test.cpp  country.h  country_importer.cpp  country_importer.h  country_importer_test.cpp  faction_importer.cpp  faction_importer.h  faction_importer_test.cpp  province_importer.cpp  province_importer.h  province_importer_test.cpp  provinces_importer.cpp  provinces_importer.h  provinces_importer_test.cpp  save.h  save_importer.cpp  save_importer.h  save_importer_test.cpp  state.h  state_importer.cpp  state_importer.h  state_importer_test.cpp  state_reader_test.cpp  states_importer.cpp  states_importer.h  states_importer_test.cpp
src/state_definitions/: state_definition_importer.cpp  state_definition_importer.h  state_definition_importer_test.cpp  state_definitions_importer.cpp  state_definitions_importer.h  state_definitions_importer_test.cpp
tools/: build_hoi4_map_drawer.sh
